--- a/transformacao/profiles.yml
+++ b/transformacao/profiles.yml
@@ -3,9 +3,9 @@ transformacao:
   outputs:
     dev:
       type: postgres
-      host: localhost
-      user: user
-      password: password
+      host: "{{ env_var('DB_HOST', 'localhost') }}"
+      user: "{{ env_var('POSTGRES_USER', 'user') }}"
+      password: "{{ env_var('POSTGRES_PASSWORD', 'password') }}"
       port: 5432
       dbname: olist_dw
       schema: dw
